# vv

./: .cvsignore  .gitignore  .travis.yml  .vimrc  CMakeLists.txt  CTestConfig.cmake  DartConfiguration.tcl  Dockerfile  LICENSE.txt  Licence_CeCILL-B_V1-en.txt  README.md  clitk.doxygen  clitk_tools.md  docWiki.sh  fast_make.sh  license-header.txt  make_meta.sh  make_new_tool.sh  notes.org~  sonar-project.properties  vv_static.md
cluster_tools/: CMakeLists.txt  check_tmp_cluster.sh  common.sh  computeEnlapsedTime.py  gate_job_ccin2p3.job  gate_job_cluster.job  gate_job_cluster_nomove.job  gate_make_merge_release.sh  gate_make_release.sh  gate_merge_merges.sh  gate_power_merge.sh  gate_run_submit_cluster.sh  gate_run_submit_cluster_nomove.sh  gate_run_submit_cluster_sps.sh  gate_upload_release.sh  mergeDoseByRegions.sh  mergeDosePerEnergyFile.sh  mergeStatFile.py  mergeStatFile.sh
common/: CMakeLists.txt  clitkChangeDicomTagGenericFilter.h  clitkChangeDicomTagGenericFilter.txx  clitkCoeffsToDVF.h  clitkCommon.cxx  clitkCommon.h  clitkCommon.txx  clitkCommonGenericFilter.h  clitkConfiguration.h  clitkConfiguration.h.in  clitkDD.h  clitkDicomRTDoseIO.cxx  clitkDicomRTDoseIO.h  clitkDicomRTDoseIOFactory.cxx  clitkDicomRTDoseIOFactory.h  clitkDicomRTStruct2ImageFilter.cxx  clitkDicomRTStruct2ImageFilter.h  clitkDicomRT_Contour.cxx  clitkDicomRT_Contour.h  clitkDicomRT_ROI.cxx  clitkDicomRT_ROI.h  clitkDicomRT_ROI_ConvertToImageFilter.cxx  clitkDicomRT_ROI_ConvertToImageFilter.h  clitkDicomRT_StructureSet.cxx  clitkDicomRT_StructureSet.h  clitkElastix.h  clitkEsrfHstImageIO.cxx  clitkEsrfHstImageIO.h  clitkEsrfHstImageIOFactory.cxx  clitkEsrfHstImageIOFactory.h  clitkEsrfHstXMLFileReader.cxx  clitkEsrfHstXMLFileReader.h  clitkExceptionObject.cxx  clitkExceptionObject.h  clitkFilterBase.cxx  clitkFilterBase.h  clitkFilterBase.txx  clitkFilterMacros.txx  clitkGateAsciiImageIO.cxx  clitkGateAsciiImageIO.h  (+89 more)
filters/: .cvsignore  CMakeLists.txt  clitkAutoCrop.ggo  clitkAutoCropGenericFilter.txx  clitkBinarizeImage.ggo  clitkBinarizeImageGenericFilter.cxx  clitkBinarizeImageGenericFilter.h  clitkBinarizeImageGenericFilter.txx  clitkFooImage.ggo  clitkFooImageGenericFilter.txx  clitkGuerreroVentilationGenericFilter.cxx  clitkGuerreroVentilationGenericFilter.h  clitkImageArithmGenericFilter.cxx  clitkImageArithmGenericFilter.h  clitkImageArithmGenericFilter.txx  clitkImageConvertGenericFilter.cxx  clitkImageConvertGenericFilter.h  clitkImageConvertGenericFilter.txx  clitkImageFillRegionGenericFilter.cxx  clitkImageFillRegionGenericFilter.h  clitkImageFillRegionGenericFilter.txx  clitkImageResampleGenericFilter.cxx  clitkImageResampleGenericFilter.h  clitkImageResampleGenericFilter.txx  clitkMedianImageGenericFilter.cxx  clitkMedianImageGenericFilter.h  clitkMedianImageGenericFilter.txx  clitkResampleImage.ggo  clitkResampleImageGenericFilter.h  clitkResampleImageGenericFilter.txx  clitkSplitImageGenericFilter.cxx  clitkSplitImageGenericFilter.h  clitkSplitImageGenericFilter.txx  clitkUnsharpMaskGenericFilter.txx  clitkVFResampleGenericFilter.cxx  clitkVFResampleGenericFilter.h  clitkVFResampleGenericFilter.txx
registration/: AffineReg.txt  CMakeLists.txt  clitkAffineRegistration.cxx  clitkAffineRegistration.ggo  clitkAffineRegistrationGenericFilter.cxx  clitkAffineRegistrationGenericFilter.h  clitkAffineRegistrationGenericFilter.txx  clitkBLUTDIR.cxx  clitkBLUTDIR.ggo  clitkBLUTDIRCommandIterationUpdateDVF.h  clitkBLUTDIRGenericFilter.cxx  clitkBLUTDIRGenericFilter.h  clitkBLUTDIRGenericFilter.txx  clitkBSplineDeformableRegistration.cxx  clitkBSplineDeformableRegistration.ggo  clitkBSplineDeformableRegistrationGenericFilter.cxx  clitkBSplineDeformableRegistrationGenericFilter.h  clitkBSplineDeformableRegistrationGenericFilter.txx  clitkBSplineDeformableTransform.h  clitkBSplineDeformableTransform.txx  clitkBSplineDeformableTransformInitializer.h  clitkBSplineDeformableTransformInitializer.txx  clitkBSplinePyramid.cxx  clitkBSplinePyramid.ggo  clitkBSplinePyramidGenericFilter.cxx  clitkBSplinePyramidGenericFilter.h  clitkBSplinePyramidGenericFilter.txx  clitkCalculateTRE.cxx  clitkCalculateTRE.ggo  clitkCalculateTREGenericFilter.cxx  clitkCalculateTREGenericFilter.h  clitkCalculateTREGenericFilter.txx  clitkConvertBLUTCoeffsToVFFilter.h  clitkConvertBLUTCoeffsToVFFilter.txx  clitkConvertBSplineDeformableTransformToVF.cxx  clitkConvertBSplineDeformableTransformToVF.ggo  clitkConvertBSplineDeformableTransformToVFGenericFilter.cxx  clitkConvertBSplineDeformableTransformToVFGenericFilter.h  clitkConvertPointList.cxx  clitkConvertPointList.ggo  (+105 more)
scripts/: CMakeLists.txt  calculate_contour_stats.sh  calculate_motion_amplitude.sh  common.sh  compress_mhd.sh  create_mhd_3D.sh  create_mhd_4D-2.0.sh  create_mhd_4D.sh  create_mhd_4D_pattern.sh  create_midP-2.0.sh  create_midP.sh  create_midP_masks-2.0.sh  create_midP_masks.sh  dcm_sort_by_field.sh  dicom_info.sh  midp_common.sh  midp_template.conf  pts_to_landmarks.sh  registration.sh
segmentation/: .gitignore  CMakeLists.txt  clitkAnatomicalFeatureDatabase.cxx  clitkAnatomicalFeatureDatabase.h  clitkAnatomicalFeatureDatabase.txx  clitkAnd.cxx  clitkAnd.ggo  clitkAndGenericFilter.cxx  clitkAndGenericFilter.h  clitkAndGenericFilter.txx  clitkBinarizeImage.cxx  clitkBinarizeImage.ggo  clitkBinarizeImageGenericFilter.cxx  clitkBinarizeImageGenericFilter.h  clitkBinarizeImageGenericFilter.txx  clitkBool.cxx  clitkBool.ggo  clitkBooleanOperatorLabelImageGenericFilter.h  clitkBooleanOperatorLabelImageGenericFilter.txx  clitkCalculateDistanceMap.cxx  clitkCalculateDistanceMap.ggo  clitkCalculateDistanceMapGenericFilter.cxx  clitkCalculateDistanceMapGenericFilter.h  clitkCalculateDistanceMapGenericFilter.txx  clitkConnectedComponentLabeling.cxx  clitkConnectedComponentLabeling.ggo  clitkConnectedComponentLabelingGenericFilter.h  clitkConnectedComponentLabelingGenericFilter.txx  clitkDecomposeAndReconstruct.cxx  clitkDecomposeAndReconstruct.ggo  clitkDecomposeAndReconstructGenericFilter.cxx  clitkDecomposeAndReconstructGenericFilter.h  (+122 more)
tests/: CMakeLists.txt  (+2 more)
(+951 files in other folders)
